Update ONSDI_install.sh